# Rust-Study

./: README.md
arrays-vectors/: Cargo.toml
arrays-vectors/src/: main.rs
basic-mutations/: Cargo.toml
basic-mutations/src/: main.rs
cashier-macro/: Cargo.toml
cashier-macro/src/: main.rs
closures-into-traits/: Cargo.toml
closures-into-traits/src/: main.rs
constants/: Cargo.toml
constants/src/: main.rs
data-types/: Cargo.toml
data-types/src/: main.rs
dereference/: Cargo.toml
dereference/src/: main.rs
graphql-juniper-mongo/: Cargo.toml
graphql-juniper-mongo/src/: allerrors.rs  db.rs  gql.rs  main.rs  model.rs
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
implementables/: Cargo.toml
implementables/src/: main.rs
match-some-err-options-results/: Cargo.toml
match-some-err-options-results/src/: main.rs
mutations-functions/: Cargo.toml
mutations-functions/src/: main.rs
parking-api/: Cargo.toml
parking-api/src/: car.rs  main.rs
trait-struct-impl/: Cargo.toml
trait-struct-impl/src/: main.rs
visitor-pattern/: Cargo.toml
visitor-pattern/src/: main.rs
