[package]
name = "graphql-juniper-mongo"
version = "0.1.0"
authors = ["Stivenson Rincón <stivenson.rpm@gmail.com>"]
edition = "2018"

[dependencies]
juniper = "0.9"
mongodb = "0.3.12"
bson = "0.13.0"
serde = "1"
serde_derive = "1"
warp = "0.1"
serde_json = "1"
failure = "0.1"
failure_derive = "0.1"
pretty_env_logger = "0.3"